--- a/app/src/main/res/layout/activity_closte_items.xml
+++ b/app/src/main/res/layout/activity_closte_items.xml
@@ -13,6 +13,7 @@
         android:layout_height="wrap_content">
 
         <ImageView
+            android:id="@+id/back_closet_items"
             android:layout_width="30dp"
             android:layout_height="30dp"
             android:layout_marginLeft="20dp"
