--- a/app/src/main/res/layout/fragment_camera_fragment.xml
+++ b/app/src/main/res/layout/fragment_camera_fragment.xml
@@ -19,6 +19,7 @@
             android:layout_height="wrap_content">
 
             <ImageView
+                android:id="@+id/back_camera"
                 android:layout_width="30dp"
                 android:layout_height="30dp"
                 android:layout_marginLeft="20dp"
