--- a/app/src/main/res/layout/fragment_looks_fragment.xml
+++ b/app/src/main/res/layout/fragment_looks_fragment.xml
@@ -18,6 +18,7 @@
             android:layout_height="wrap_content">
 
             <ImageView
+                android:id="@+id/back_looks"
                 android:layout_width="30dp"
                 android:layout_height="30dp"
                 android:layout_marginLeft="20dp"
