--- a/app/src/main/res/drawable/color_black.xml
+++ b/app/src/main/res/drawable/color_black.xml
@@ -3,7 +3,7 @@
     android:shape="oval">
 
     <solid android:color="@color/black"/>
-    <stroke android:color="@color/grey" android:width="1dp"/>
+    <stroke android:color="@color/wood_brown" android:width="5dp"/>
 
 
 </shape>
