--- a/app/src/main/res/layout/activity_closet.xml
+++ b/app/src/main/res/layout/activity_closet.xml
@@ -5,7 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white"
-    tools:context=".Closet">
+    tools:context=".Closet"
+    android:id="@+id/closet_View">
 
     <RelativeLayout
         android:layout_width="match_parent"
