--- a/app/src/main/res/layout/activity_selected_clothe.xml
+++ b/app/src/main/res/layout/activity_selected_clothe.xml
@@ -186,7 +186,7 @@
                                     android:layout_width="35dp"
                                     android:layout_height="35dp"
                                     android:layout_marginTop="5dp"
-                                    android:src="@drawable/color_black" />
+                                    android:src="@drawable/color_black_" />
 
                             </LinearLayout>
 
