Pre final commit

--- a/app/src/main/res/layout/activity_forget_password.xml
+++ b/app/src/main/res/layout/activity_forget_password.xml
@@ -34,6 +34,7 @@
             android:textAlignment="center"/>
 
         <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/user_email_password"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
@@ -66,16 +67,16 @@
             android:layout_marginTop="20dp">
 
             <Button
-                android:id="@+id/next_1"
+                android:id="@+id/send_reset_email"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerInParent="true"
                 android:layout_gravity="center_horizontal"
                 android:backgroundTint="@color/wood_brown"
                 android:fontFamily="@font/montserrat"
-                android:text="@string/next"
-                android:textColor="@color/white"
+                android:text="@string/send"
                 android:textAllCaps="false"
+                android:textColor="@color/white"
                 android:textSize="18sp" />
 
             <Button
