--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -319,6 +319,7 @@
                     android:textSize="20dp" />
 
                 <Button
+                    android:id="@+id/change_password_bttn"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="20dp"
