--- a/app/src/main/res/layout/activity_closte_items.xml
+++ b/app/src/main/res/layout/activity_closte_items.xml
@@ -23,6 +23,35 @@
             android:clickable="true"
             android:src="@drawable/back" />
 
+        <com.google.android.material.textfield.TextInputLayout
+            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
+            android:id="@+id/search_input"
+            android:layout_width="150dp"
+            android:layout_height="wrap_content"
+            android:hint="@string/search"
+            android:layout_centerInParent="true"
+            android:textColorHint="@color/black_trans"
+            app:endIconMode="clear_text"
+            app:endIconTint="@color/black"
+            app:startIconDrawable="@drawable/search"
+            app:startIconTint="@color/black"
+            app:boxStrokeColor="@color/wood_brown"
+            app:boxStrokeWidthFocused="2dp"
+            app:errorTextColor="@color/red"
+            app:errorIconTint="@color/red"
+            app:boxStrokeErrorColor="@color/red">
+
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/edit_search"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/montserrat"
+                android:background="@android:color/transparent"
+                android:textColor="@color/black"
+                android:inputType="textPersonName"/>
+
+        </com.google.android.material.textfield.TextInputLayout>
+
     </RelativeLayout>
 
     <LinearLayout
