--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -51,8 +51,8 @@
                 android:layout_height="wrap_content"
                 android:layout_centerInParent="true"
                 android:fontFamily="@font/pacifico"
-                android:text="@string/slogan"
-                android:textColor="@color/white"
+                android:text="@string/slogan2"
+                android:textColor="@color/wood_brown"
                 android:textSize="20sp" />
 
         </RelativeLayout>
@@ -75,7 +75,7 @@
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
-                   android:layout_marginTop="30dp"
+                   android:layout_marginTop="20dp"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/round_corners_smaller"
                    android:elevation="3dp">
@@ -94,24 +94,9 @@
                            android:fontFamily="@font/montserrat"
                            android:text="@string/suggested_clothes"
                            android:textColor="@color/wood_brown"
-                           android:textSize="15sp" />
+                           android:textSize="18dp" />
 
                    </RelativeLayout>
-
-
-                   <ProgressBar
-                       android:id="@+id/progress"
-                       android:layout_width="120dp"
-                       android:layout_height="200dp"
-                       android:layout_marginStart="15dp"
-                       android:layout_marginTop="40dp"
-                       android:layout_toLeftOf="@id/featured_recycler"
-                       android:background="@drawable/round_corners_weather"
-                       android:indeterminate="true"
-                       android:indeterminateTint="@color/wood_brown"
-                       android:indeterminateTintMode="src_atop"
-                       android:progressTint="#663300"
-                       android:visibility="visible" />
 
                    <LinearLayout
                        android:id="@+id/weather"
@@ -125,43 +110,68 @@
                        android:orientation="vertical"
                        android:visibility="visible">
 
-                       <TextView
-                           android:id="@+id/city_weather"
-                           android:layout_width="match_parent"
-                           android:layout_height="wrap_content"
-                           android:layout_marginTop="10dp"
-                           android:fontFamily="@font/montserrat"
-                           android:text="@string/city"
-                           android:textAlignment="center"
-                           android:textColor="@color/wood_brown"
-                           android:textSize="15sp" />
+                       <ProgressBar
+                           android:id="@+id/progress"
+                           android:layout_width="120dp"
+                           android:layout_height="200dp"
+                           style="@style/Widget.AppCompat.ProgressBar"
+                           android:background="@drawable/round_corners_weather"
+                           android:indeterminate="true"
+                           android:indeterminateOnly="true"
+                           android:indeterminateTint="@color/wood_brown"
+                           android:indeterminateTintMode="src_atop"
+                           android:progressTint="#663300"
+                           android:visibility="gone"/>
 
-                       <TextView
-                           android:id="@+id/temperature"
-                           android:layout_width="match_parent"
-                           android:layout_height="wrap_content"
-                           android:layout_margin="5dp"
-                           android:fontFamily="@font/montserrat"
-                           android:gravity="center_horizontal"
-                           android:text="@string/temperature"
-                           android:textColor="@color/wood_brown"
-                           android:textSize="25sp" />
+                       <LinearLayout
+                           android:id="@+id/weather_data"
+                           android:layout_width="120dp"
+                           android:layout_height="200dp"
+                           android:orientation="vertical"
+                           android:visibility="visible">
 
-                       <ImageView
-                           android:id="@+id/weather_icon"
-                           android:layout_width="70dp"
-                           android:layout_height="70dp"
-                           android:layout_gravity="center_horizontal"
-                           android:src="@mipmap/ic_launcher" />
+                           <TextView
+                               android:id="@+id/city_weather"
+                               android:layout_width="match_parent"
+                               android:layout_height="wrap_content"
+                               android:layout_marginTop="10dp"
+                               android:fontFamily="@font/montserrat"
+                               android:text="@string/city"
+                               android:textAlignment="center"
+                               android:textColor="@color/wood_brown"
+                               android:textSize="15sp" />
 
-                       <TextView
-                           android:id="@+id/condition"
-                           android:layout_width="match_parent"
-                           android:layout_height="wrap_content"
-                           android:layout_marginTop="5dp"
-                           android:text="@string/condition"
-                           android:textAlignment="center"
-                           android:textColor="@color/wood_brown" />
+                           <TextView
+                               android:id="@+id/temperature"
+                               android:layout_width="120dp"
+                               android:layout_height="wrap_content"
+                               android:layout_marginTop="5dp"
+                               android:layout_marginBottom="5dp"
+                               android:fontFamily="@font/montserrat"
+                               android:gravity="center_horizontal"
+                               android:text="@string/temperature"
+                               android:textColor="@color/wood_brown"
+                               android:textSize="25sp" />
+
+                           <ImageView
+                               android:id="@+id/weather_icon"
+                               android:layout_width="80dp"
+                               android:layout_height="80dp"
+                               android:layout_gravity="center_horizontal"
+                               android:src="@mipmap/ic_launcher" />
+
+                           <TextView
+                               android:id="@+id/condition"
+                               android:layout_width="match_parent"
+                               android:layout_height="wrap_content"
+                               android:layout_marginTop="5dp"
+                               android:text="@string/condition"
+                               android:textAlignment="center"
+                               android:textColor="@color/wood_brown"/>
+
+                       </LinearLayout>
+
+
 
                    </LinearLayout>
 
@@ -180,8 +190,6 @@
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
-                   android:layout_marginRight="10dp"
-                   android:layout_marginLeft="10dp"
                    android:layout_marginTop="20dp"
                    android:orientation="horizontal">
 
@@ -190,8 +198,8 @@
                        android:layout_width="140dp"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
-                       android:layout_marginLeft="10dp"
                        android:layout_marginBottom="10dp"
+                       android:layout_marginLeft="10dp"
                        android:background="@drawable/round_corners_smaller_all"
                        android:clickable="true"
                        android:elevation="3dp">
@@ -200,53 +208,72 @@
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:layout_centerInParent="true"
-                           android:layout_margin="10dp"
+                           android:layout_marginStart="10dp"
+                           android:layout_marginTop="10dp"
+                           android:layout_marginEnd="10dp"
+                           android:layout_marginBottom="10dp"
                            android:src="@drawable/all_clothes" />
 
                    </RelativeLayout>
 
                    <RelativeLayout
+                       android:id="@+id/add_button"
                        android:layout_width="140dp"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_marginRight="10dp"
                        android:layout_marginBottom="10dp"
                        android:background="@drawable/round_corners_smaller_all"
+                       android:clickable="true"
                        android:elevation="3dp">
 
                        <ImageView
                            android:layout_width="40dp"
-                           android:layout_height="40dp"
+                           android:layout_height="45dp"
                            android:layout_centerInParent="true"
-                           android:layout_margin="10dp"
-                           android:src="@drawable/looks" />
+                           android:layout_marginStart="10dp"
+                           android:layout_marginTop="10dp"
+                           android:layout_marginEnd="10dp"
+                           android:layout_marginBottom="5dp"
+                           android:src="@drawable/add_clothe"
+                           app:drawableTint="@color/black" />
 
                    </RelativeLayout>
 
                </RelativeLayout>
 
-               <RelativeLayout
-                   android:id="@+id/log_out_button"
-                   android:layout_width="140dp"
-                   android:layout_height="wrap_content"
-                   android:layout_gravity="center_horizontal"
+
+
+               <LinearLayout
+                   android:layout_width="match_parent"
+                   android:layout_height="240dp"
+                   android:orientation="vertical"
+                   android:layout_marginTop="15dp"
                    android:layout_marginLeft="10dp"
+                   android:layout_marginRight="10dp"
+                   android:elevation="3dp"
                    android:layout_marginBottom="10dp"
-                   android:background="@drawable/round_corners_smaller_all"
-                   android:clickable="true"
-                   android:elevation="3dp">
+                   android:background="@drawable/round_corners_smaller">
 
-                   <ImageView
-                       android:layout_width="40dp"
-                       android:layout_height="40dp"
-                       android:layout_centerInParent="true"
-                       android:layout_marginStart="10dp"
+                   <TextView
+                       android:layout_width="wrap_content"
+                       android:layout_height="wrap_content"
+                       android:text="@string/fashion"
+                       android:layout_marginTop="15dp"
+                       android:layout_marginLeft="15dp"
+                       android:textColor="@color/wood_brown"
+                       android:textSize="20dp"/>
+
+                   <androidx.recyclerview.widget.RecyclerView
+                       android:id="@+id/news_recycler"
+                       android:layout_width="match_parent"
+                       android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
-                       android:layout_marginEnd="10dp"
-                       android:layout_marginBottom="10dp"
-                       android:src="@drawable/looks" />
+                       android:layout_marginLeft="5dp"
+                       android:layout_marginRight="5dp"
+                       android:layout_marginBottom="10dp"/>
 
-               </RelativeLayout>
+               </LinearLayout>
 
            </LinearLayout>
 
