--- a/app/src/main/res/layout/fragment_camera_fragment.xml
+++ b/app/src/main/res/layout/fragment_camera_fragment.xml
@@ -55,7 +55,7 @@
                         android:layout_gravity="center_horizontal"
                         android:layout_marginTop="30dp"
                         android:clickable="true"
-                        android:src="@drawable/camera" />
+                        android:src="@drawable/add_image" />
 
                     <com.google.android.material.textfield.TextInputLayout
                         android:id="@+id/clothe_title"
