--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -79,22 +79,22 @@
 
 <!--    </item>-->
 
-    <item android:title="Settings">
+<!--    <item android:title="Settings">-->
 
-        <menu>
+<!--        <menu>-->
 
-            <group android:checkableBehavior="single">
+<!--            <group android:checkableBehavior="single">-->
 
-                <item
-                    android:id="@+id/nav_settings"
-                    android:title="@string/settings"
-                    android:icon="@drawable/settings"/>
+<!--                <item-->
+<!--                    android:id="@+id/nav_settings"-->
+<!--                    android:title="@string/settings"-->
+<!--                    android:icon="@drawable/settings"/>-->
 
-            </group>
+<!--            </group>-->
 
-        </menu>
+<!--        </menu>-->
 
-    </item>
+<!--    </item>-->
 
 
 
