--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,6 @@
     android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-
     tools:context=".MainActivity">
 
     <com.google.android.material.navigation.NavigationView
@@ -155,8 +154,8 @@
 
                            <ImageView
                                android:id="@+id/weather_icon"
-                               android:layout_width="80dp"
-                               android:layout_height="80dp"
+                               android:layout_width="70dp"
+                               android:layout_height="70dp"
                                android:layout_gravity="center_horizontal"
                                android:src="@mipmap/ic_launcher" />
 
@@ -256,6 +255,7 @@
                    android:background="@drawable/round_corners_smaller">
 
                    <TextView
+                       android:id="@+id/news"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/fashion"
