--- a/app/src/main/res/layout/fashion_news_card_design.xml
+++ b/app/src/main/res/layout/fashion_news_card_design.xml
@@ -15,11 +15,27 @@
         android:background="@drawable/round_corners_weather"
         android:orientation="horizontal">
 
-        <ImageView
-            android:id="@+id/news_image"
-            android:layout_margin="10dp"
-            android:layout_width="100dp"
-            android:layout_height="80dp"/>
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:layout_margin="10dp">
+
+            <ImageView
+                android:id="@+id/news_image"
+                android:layout_width="100dp"
+                android:layout_height="70dp"/>
+
+            <TextView
+                android:id="@+id/news_resource"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="5dp"
+                android:layout_margin="3dp"/>
+
+        </LinearLayout>
+
+
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -35,6 +51,7 @@
                 android:layout_height="wrap_content"
                 android:textSize="10dp"
                 android:textStyle="bold"
+                android:maxLines="2"
                 android:textColor="@color/wood_brown"
                 android:fontFamily="@font/montserrat"/>
 
