--- a/app/src/main/res/layout/fragment_weather_forecast.xml
+++ b/app/src/main/res/layout/fragment_weather_forecast.xml
@@ -1,16 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
     android:layout_gravity="center"
+    android:layout_margin="10dp"
+    android:gravity="center"
     tools:context=".WeatherForecast"
     android:orientation="vertical"
    android:background="@android:color/transparent">
 
     <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:orientation="vertical"
         android:background="@drawable/round_corners_weather">
 
@@ -26,13 +28,11 @@
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/weather_forecast_recycler"
-            android:layout_width="match_parent"
+            android:layout_width="300dp"
             android:layout_height="wrap_content"
             android:layout_margin="10dp"
             android:layout_gravity="center"/>
 
     </LinearLayout>
-
-
 
 </LinearLayout>
